--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,37 @@
 # Core dependencies
-python-dotenv==1.0.0
-httpx==0.25.2
-asyncio==3.4.3
-numpy==1.24.3
-nest-asyncio==1.5.8
+python-dotenv>=1.0.0
+httpx>=0.25.2
+numpy>=1.24.3
+nest-asyncio>=1.5.8
 
 # LiveKit and voice processing
-livekit==0.11.1
-livekit-agents[openai,silero]==0.7.2
-livekit-plugins-openai==0.6.4
-livekit-plugins-silero==0.6.3
+livekit>=0.15.0
+livekit-agents[openai,silero]>=0.8.0
+livekit-plugins-openai>=1.1.5
+livekit-plugins-silero>=0.6.3
 
 # AI/ML frameworks
-anthropic==0.21.3
-openai==1.12.0
-langchain==0.1.16
-langchain-openai==0.1.3
-langgraph==0.0.37
-tiktoken==0.6.0
+anthropic>=0.25.0
+openai>=1.30.0
+langchain>=0.2.0
+langchain-openai>=0.1.8
+langgraph>=0.0.65
+tiktoken>=0.7.0
 
 # Vector store and embeddings
-faiss-cpu==1.7.4
+faiss-cpu
 
 # Web interface
-gradio==4.19.2
+gradio>=4.36.0
 
 # MCP (Model Context Protocol)
-mcp==0.1.0
+mcp>=1.0.0
 
 # Logging and monitoring
-structlog==24.1.0
+structlog>=24.1.0
 
 # Optional: For development
-pytest==8.0.2
-pytest-asyncio==0.23.5
-black==24.2.0
-flake8==7.0.0
+pytest>=8.2.0
+pytest-asyncio>=0.23.7
+black>=24.4.0
+flake8>=7.1.0
