--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Core dependencies
 python-dotenv>=1.0.0
 httpx>=0.25.2
-numpy>=1.24.3
+numpy<2
 nest-asyncio>=1.5.8
 
 # LiveKit and voice processing
