Fix LiveKit deployment based on 2025 research
- Fixed deprecated CLI commands - use lk app create --template
- Updated agent.py to use new AgentSession pattern (not VoiceAssistant)
- Fixed OpenAI Realtime API syntax to use openai.realtime.RealtimeModel
- Updated token generation to use LiveKit SDK api.AccessToken()
- Added proper Dockerfile for API server deployment to ECS
- Created comprehensive deployment guide with troubleshooting
- Removed deprecated agent files

Architecture confirmed: Agent -> API Server -> Amadeus SDK
This maintains all existing functionality while fixing deployment issues

--- a/Dockerfile.api
+++ b/Dockerfile.api
@@ -1,18 +1,34 @@
+# Dockerfile for API server with Amadeus integration
 FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir fastapi uvicorn httpx python-dotenv
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
 
-# Copy API files
-COPY mcp_servers/flight_search_api.py .
-COPY services/flight_api.py ./services/
+# Copy requirements
+COPY requirements.txt .
+
+# Install Python dependencies
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copy application code
+COPY api_server.py .
+COPY services/ ./services/
 COPY utils/ ./utils/
 
-# Expose port
-EXPOSE 8765
+# Create non-root user for security
+RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
+USER appuser
 
-# Run the API
-CMD ["uvicorn", "flight_search_api:app", "--host", "0.0.0.0", "--port", "8765"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD curl -f http://localhost:8000/health || exit 1
+
+# Expose port
+EXPOSE 8000
+
+# Run the API server
+CMD ["python", "-m", "uvicorn", "api_server:app", "--host", "0.0.0.0", "--port", "8000"]
