--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ websockets>=12.0
 httpx>=0.25.0
 python-dotenv>=1.0.0
 uvicorn>=0.24.0
+livekit>=0.17.0
+livekit-api>=0.6.0
+amadeus>=10.0.0
 
 # Audio processing
 pydantic>=2.0.0
