Complete deployment setup for UI, API, and Agent
- Updated Web UI for Vercel deployment with proper agent triggering
- Added Docker support for LiveKit agent with scipy dependencies
- Created docker-compose.yml for local development
- Added run-local.sh script for easy local testing
- Added run-docker.sh script for Docker deployment
- Created ECS task definition for agent deployment
- Added deploy-agent-ecs.sh script for ECS deployment
- Created comprehensive DEPLOYMENT_README.md
- Fixed audio element handling in web UI
- Added environment variable support for API URL

The system now supports:
1. UI on Vercel (deployed)
2. API on ECS (existing) or local
3. Agent running locally, Docker, or ECS

--- a/polyglot-flight-agent/Dockerfile
+++ b/polyglot-flight-agent/Dockerfile
@@ -2,9 +2,10 @@ FROM python:3.11-slim
 
 ENV PYTHONUNBUFFERED=1
 
-# Install system dependencies including DNS tools
+# Install system dependencies including scipy requirements
 RUN apt-get update && \
-    apt-get install -y gcc g++ python3-dev curl dnsutils && \
+    apt-get install -y gcc g++ python3-dev curl dnsutils \
+    gfortran libopenblas-dev pkg-config && \
     rm -rf /var/lib/apt/lists/*
 
 # Create app directory
@@ -14,8 +15,9 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy agent code
+# Copy agent code and utilities
 COPY agent.py .
+COPY audio_utils.py .
 
 # Download any required model files at build time
 RUN python agent.py download-files || true
@@ -24,8 +26,8 @@ RUN python agent.py download-files || true
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD python -c "import requests; requests.get('${API_SERVER_URL}/health', timeout=5)" || exit 1
 
-# Expose health check port
-EXPOSE 8081
+# Expose debug server port
+EXPOSE 8082
 
-# Run the agent in dev mode to accept all jobs
-CMD ["python", "agent.py", "dev"]
+# Run the agent
+CMD ["python", "agent.py", "start"]
