Remove .livekit file with API secrets and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -229,6 +229,11 @@ EXECUTIVE_SUMMARY.md
 .vercel/
 web-app/.vercel/
 
+# LiveKit credentials
+.livekit
+livekit-agent/.livekit
+polyglot-flight-agent/.livekit
+
 # Terraform
 *.tfstate
 *.tfstate.*
