--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,50 +1,36 @@
 version: '3.8'
 
 services:
-  # API Server (local only for now)
-  api:
-    build:
-      context: .
-      dockerfile: Dockerfile.api
+  agent:
+    build: ./polyglot-flight-agent
+    container_name: polyglot-agent
+    restart: unless-stopped
+    environment:
+      - PYTHONUNBUFFERED=1
+    volumes:
+      - ./.env:/app/.env:ro
+      - ./polyglot-flight-agent/logs:/app/logs
+    depends_on:
+      - api-server
+    networks:
+      - polyglot-network
+
+  api-server:
+    build: .
+    container_name: polyglot-api
+    restart: unless-stopped
     ports:
       - "8000:8000"
     environment:
-      - LIVEKIT_URL=${LIVEKIT_URL}
-      - LIVEKIT_API_KEY=${LIVEKIT_API_KEY}
-      - LIVEKIT_API_SECRET=${LIVEKIT_API_SECRET}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
-      - DEEPGRAM_API_KEY=${DEEPGRAM_API_KEY}
-      - CARTESIA_API_KEY=${CARTESIA_API_KEY}
-      - AMADEUS_CLIENT_ID=${AMADEUS_CLIENT_ID}
-      - AMADEUS_CLIENT_SECRET=${AMADEUS_CLIENT_SECRET}
-      - AVIATIONSTACK_API_KEY=${AVIATIONSTACK_API_KEY}
-      - SERPAPI_API_KEY=${SERPAPI_API_KEY}
+      - PORT=8000
+      - HOST=0.0.0.0
+      - PYTHONUNBUFFERED=1
     volumes:
-      - ./logs:/app/logs
+      - ./.env:/app/.env:ro
+    command: python api_server.py
     networks:
-      - polyglot-net
-
-  # LiveKit Agent
-  agent:
-    build:
-      context: ./polyglot-flight-agent
-      dockerfile: Dockerfile
-    ports:
-      - "8082:8082"
-    environment:
-      - LIVEKIT_URL=${LIVEKIT_URL}
-      - LIVEKIT_API_KEY=${LIVEKIT_API_KEY}
-      - LIVEKIT_API_SECRET=${LIVEKIT_API_SECRET}
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - DEEPGRAM_API_KEY=${DEEPGRAM_API_KEY}
-      - CARTESIA_API_KEY=${CARTESIA_API_KEY}
-      - API_SERVER_URL=http://api:8000
-    depends_on:
-      - api
-    networks:
-      - polyglot-net
+      - polyglot-network
 
 networks:
-  polyglot-net:
+  polyglot-network:
     driver: bridge
