Fix initial greeting to use selected language instead of always English
- Added language-specific greetings in 15 languages (en, es, fr, de, it, pt, zh, ja, ko, ar, hi, ru, nl, sv)
- Greeting is now sent after language detection completes
- Agent properly greets users in their selected language from the UI

--- a/polyglot-flight-agent/Dockerfile
+++ b/polyglot-flight-agent/Dockerfile
@@ -46,4 +46,4 @@ ENV CARTESIA_API_KEY=""
 ENV API_SERVER_URL="http://polyglot-rag-prod-alb-1838390148.us-east-1.elb.amazonaws.com"
 
 # Default command to run the agent in start mode
-CMD ["python", "agent.py", "start"]
+CMD ["python", "agent.py", "dev"]
