--- a/polyglot-flight-agent/requirements.txt
+++ b/polyglot-flight-agent/requirements.txt
@@ -1,12 +1,13 @@
-livekit-agents~=1.0
-livekit-plugins-openai~=1.0
-livekit-plugins-cartesia~=1.0
-livekit-plugins-deepgram~=1.0
-livekit-plugins-silero~=1.0
-# optional, only when using LiveKit's turn detection model
-livekit-plugins-turn-detector~=1.0
-# optional, only if background voice & noise cancellation is needed
-livekit-plugins-noise-cancellation>=0.2.0,<1.0.0
+livekit==1.0.11
+livekit-agents==1.0.23
+livekit-api==1.0.3
+livekit-plugins-cartesia==1.0.23
+livekit-plugins-deepgram==1.0.23
+livekit-plugins-noise-cancellation==0.2.5
+livekit-plugins-openai==1.0.23
+livekit-plugins-silero==1.0.23
+livekit-plugins-turn-detector==1.0.23
+livekit-protocol==1.0.4
 python-dotenv~=1.0
 aiohttp>=3.8.0
 httpx>=0.24.0
