--- a/livekit-agent/requirements.txt
+++ b/livekit-agent/requirements.txt
@@ -1,5 +1,9 @@
-livekit-agents[openai]>=0.11.0
-livekit>=0.17.0
-python-dotenv
+livekit==1.0.11
+livekit-agents==1.0.23
+livekit-api==1.0.3
+livekit-plugins-openai==1.0.23
+livekit-plugins-silero==1.0.23
+livekit-protocol==1.0.4
+python-dotenv~=1.0
 aiohttp>=3.9.0
 amadeus>=12.0.0
