--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,9 @@ websockets>=12.0
 httpx>=0.25.0
 python-dotenv>=1.0.0
 uvicorn>=0.24.0
-livekit>=0.17.0
-livekit-api>=0.6.0
+livekit==1.0.11
+livekit-api==1.0.3
+livekit-protocol==1.0.4
 amadeus>=10.0.0
 
 # Audio processing
